--- a/etc/e11-cli/lambda-home/pyproject.toml
+++ b/etc/e11-cli/lambda-home/pyproject.toml
@@ -11,19 +11,19 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.13,<3.14"
-boto3 = "*"
-requests = "*"
-dnspython = "*"
-paramiko = "*"
-email-validator = "*"
-itsdangerous = "*"
-pyjwt = "*"
-jinja2 = "*"
-pydantic = "*"
+boto3 = "^1.40.71"
+requests = "^2.32.5"
+dnspython = "^2.8.0"
+paramiko = "^4.0.0"
+email-validator = "^2.3.0"
+itsdangerous = "^2.2.0"
+pyjwt = "^2.10.1"
+jinja2 = "^3.1.6"
+pydantic = "^2.12.4"
 boto3-stubs = { version = "*", extras = ["essential", "route53", "secretsmanager", "dynamodb"] }
 
 [tool.poetry.group.dev.dependencies]
-djlint = "*"
+djlint = "^1.36.4"
 pylint = "*"
 pyright = "*"
 pytest = "*"
