report and register-email now work.
```
DynamoDB Tables:
Table: Leaderboard, Approximate Item Count: 22
Table: e11-users, Approximate Item Count: 135
Table: home-app-prod-sessions, Approximate Item Count: 0
Table: home-app-stage-sessions, Approximate Item Count: 0
Users:
Registered                Email                        Name              HarvardKey
------------------------  ---------------------------  ----------------  ------------
...
```

--- a/etc/e11-cli/lambda-home/pyproject.toml
+++ b/etc/e11-cli/lambda-home/pyproject.toml
@@ -29,6 +29,8 @@ pyright = "*"
 pytest = "*"
 pytest-cov = "*"
 ruff = "*"
+boto3-stubs = "^1.40.71"
+mypy-boto3-route53 = "^1.40.57"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
