--- a/etc/e11-cli/pyproject.toml
+++ b/etc/e11-cli/pyproject.toml
@@ -18,6 +18,7 @@ pyjwt = ">=2.10.1,<3.0.0"
 jinja2 = ">=3.1.6,<4.0.0"
 pydantic = "*"
 crossplane = "^0.5.8"
+tabulate = "^0.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -28,6 +29,10 @@ flask = ">=3.0.0,<4.0.0"
 boto3-stubs = "^1.40.70"
 types-requests = "^2.32.4.20250913"
 pyright = "^1.1.407"
+mypy-boto3-route53 = "^1.40.57"
+mypy-boto3-dynamodb = "^1.40.56"
+mypy-boto3-ses = "^1.40.60"
+pydantic = "^2.12.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
