--- a/etc/e11-cli/lambda-home/pyproject.toml
+++ b/etc/e11-cli/lambda-home/pyproject.toml
@@ -31,6 +31,7 @@ pytest-cov = "*"
 ruff = "*"
 boto3-stubs = "^1.40.71"
 mypy-boto3-route53 = "^1.40.57"
+flask = "^3.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
