--- a/etc/e11-cli/lambda-home/pyproject.toml
+++ b/etc/e11-cli/lambda-home/pyproject.toml
@@ -21,6 +21,7 @@ pyjwt = "^2.10.1"
 jinja2 = "^3.1.6"
 pydantic = "^2.12.4"
 boto3-stubs = { version = "*", extras = ["essential", "route53", "secretsmanager", "dynamodb"] }
+crossplane = "^0.5.8"
 
 [tool.poetry.group.dev.dependencies]
 djlint = "^1.36.4"
