--- a/etc/e11-cli/pyproject.toml
+++ b/etc/e11-cli/pyproject.toml
@@ -19,6 +19,7 @@ jinja2 = ">=3.1.6,<4.0.0"
 pydantic = "*"
 crossplane = "^0.5.8"
 tabulate = "^0.9.0"
+pyyaml = "^6.0.3"
 
 
 [tool.poetry.group.dev.dependencies]
