--- a/lab6/pyproject.toml
+++ b/lab6/pyproject.toml
@@ -21,6 +21,7 @@ package-mode = false
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.3.8"
 djlint = "^1.36.4"
+types-flask = "^1.1.6"
 
 [tool.pylint.variables]
 # Allow variable names that start with 'api_' or 'route_' to be unused
