--- a/lab5/pyproject.toml
+++ b/lab5/pyproject.toml
@@ -12,15 +12,19 @@ dependencies = [
     "gunicorn (>=23.0.0,<24.0.0)",
     "tabulate (>=0.9.0,<0.10.0)",
     "click (>=8.2.1,<9.0.0)",
-    "boto3 (>=1.40.11,<2.0.0)"
+    "boto3 (>=1.40.11,<2.0.0)",
+    "pillow (>=12.0.0,<13.0.0)",
+    "requests (>=2.32.5,<3.0.0)"
 ]
 
 [tool.poetry]
 package-mode = false
 
+
 [tool.poetry.group.dev.dependencies]
-pylint = "^3.3.8"
+pylint = "^4.0.4"
 djlint = "^1.36.4"
+types-flask = "^1.1.6"
 
 [tool.pylint.variables]
 # Allow variable names that start with 'api_' or 'route_' to be unused
