--- a/etc/e11-cli/lambda-home/pyproject.toml
+++ b/etc/e11-cli/lambda-home/pyproject.toml
@@ -23,6 +23,7 @@ pydantic = "^2.12.4"
 boto3-stubs = { version = "*", extras = ["essential", "route53", "secretsmanager", "dynamodb"] }
 crossplane = "^0.5.8"
 pyyaml = "^6.0.3"
+tabulate = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 djlint = "^1.36.4"
