--- a/etc/e11-cli/lambda-home/pyproject.toml
+++ b/etc/e11-cli/lambda-home/pyproject.toml
@@ -25,15 +25,20 @@ crossplane = "^0.5.8"
 pyyaml = "^6.0.3"
 
 [tool.poetry.group.dev.dependencies]
+boto3-stubs = {extras = ["route53"], version = "^1.41.5"}
 djlint = "^1.36.4"
-pylint = "*"
-pyright = "*"
-pytest = "*"
-pytest-cov = "*"
-ruff = "*"
-boto3-stubs = "^1.40.71"
-mypy-boto3-route53 = "^1.40.57"
 flask = "^3.1.2"
+mypy-boto3-dynamodb = "^1.40.56"
+mypy-boto3-route53 = "^1.40.57"
+mypy-boto3-secretsmanager = "^1.40.60"
+mypy-boto3-ses = "^1.40.60"
+pydantic = "^2.12.4"
+pylint = "^3.3.8"
+pyright = "^1.1.407"
+pytest = ">=8.4.1,<9.0.0"
+pytest-cov = ">=6.2.1,<7.0.0"
+types-requests = "^2.32.4.20250913"
+ruff = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
