--- a/etc/e11-cli/pyproject.toml
+++ b/etc/e11-cli/pyproject.toml
@@ -37,6 +37,7 @@ pytest = ">=8.4.1,<9.0.0"
 pytest-cov = ">=6.2.1,<7.0.0"
 types-requests = "^2.32.4.20250913"
 ruff = "*"
+types-boto3 = "^1.42.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
