--- a/lab2/pyproject.toml
+++ b/lab2/pyproject.toml
@@ -10,6 +10,9 @@ package-mode = false
 python = ">=3.12"
 djlint = ">=1.36.4,<2.0.0"
 
+[tool.poetry.group.dev.dependencies]
+pyright = "^1.1.407"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
