--- a/lab7/Makefile
+++ b/lab7/Makefile
@@ -12,6 +12,10 @@ $(PYTHON):
 	poetry config virtualenvs.in-project true
 	poetry install		# installs the current poetry.lock, do not update
 
+lint:
+	poetry run pylint *.py
+	poetry run pyright *.py
+
 distclean:
 	/bin/rm -rf .venv
 	/bin/rm -f instance/message_board.db
