--- a/lab3/pyproject.toml
+++ b/lab3/pyproject.toml
@@ -18,6 +18,7 @@ package-mode = false
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.3.8"
+pyright = "^1.1.407"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
