--- a/lab6/pyproject.toml
+++ b/lab6/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "gunicorn (>=23.0.0,<24.0.0)",
     "tabulate (>=0.9.0,<0.10.0)",
     "click (>=8.2.1,<9.0.0)",
-    "boto3 (>=1.40.11,<2.0.0)"
+    "boto3 (>=1.40.11,<2.0.0)",
+    "pillow (>=12.0.0,<13.0.0)"
 ]
 
 [tool.poetry]
@@ -22,6 +23,7 @@ package-mode = false
 pylint = "^3.3.8"
 djlint = "^1.36.4"
 types-flask = "^1.1.6"
+pyright = "^1.1.407"
 
 [tool.pylint.variables]
 # Allow variable names that start with 'api_' or 'route_' to be unused
