frustrating, but this works

--- a/lab7/Makefile
+++ b/lab7/Makefile
@@ -11,6 +11,7 @@ install: $(PYTHON)
 $(PYTHON):
 	poetry config virtualenvs.in-project true
 	poetry install		# installs the current poetry.lock, do not update
+	poetry install --with dev
 
 lint:
 	poetry run pylint *.py
