--- a/etc/e11-cli/pyproject.toml
+++ b/etc/e11-cli/pyproject.toml
@@ -40,7 +40,7 @@ ruff = "*"
 types-boto3 = "^1.42.1"
 
 [build-system]
-requires = ["poetry-core>=1.0.0","argparse-manpage>=^4.7"]
+requires = ["poetry-core>=1.0.0","argparse-manpage>=4.7.0"]
 build-backend = "poetry.core.masonry.api"
 
 
