--- a/etc/e11-cli/pyproject.toml
+++ b/etc/e11-cli/pyproject.toml
@@ -38,6 +38,7 @@ pytest-cov = ">=6.2.1,<7.0.0"
 types-requests = "^2.32.4.20250913"
 ruff = "*"
 types-boto3 = "^1.42.1"
+argparse-manpage = "^4.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0","argparse-manpage>=4.7.0"]
