--- a/etc/e11-cli/lambda-leaderboard/Makefile
+++ b/etc/e11-cli/lambda-leaderboard/Makefile
@@ -2,26 +2,38 @@
 
 PYTHON=.venv/bin/python3.13
 
-check: $(PYTHON)
+check: $(PYTHON) vend-e11
 	$(PYTHON) -m pytest --log-cli-level=DEBUG
 
-lint: $(PYTHON)
+lint: $(PYTHON) vend-e11
 	$(PYTHON) -m pylint leaderboard_app
 
-local-debug: $(PYTHON)
+local-debug: $(PYTHON) vend-e11
 	$(PYTHON) -c 'from leaderboard_app.flask_app import app; app.run(debug=True)'
 
 # https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/using-sam-cli-sync.html
 sam-sync: $(PYTHON)
 	sam sync --code --watch
 
-deploy: $(PYTHON)
+deploy: $(PYTHON) vend-e11
 	make pylint
 	sam validate
 	sam validate --lint
 	sam build
 	sam deploy
 	sam logs --stack-name leaderboard --tail
+
+# --- Custom Vendoring
+.PHONY: vend-e11
+vend-e11: install
+	@echo "Building src/leaderboard_app/e11.whl via pip"
+	( cd .. && poetry run python -m pip wheel --no-deps -w dist . )
+	@echo "Installing wheel into src/leaderboard_app/ as e11.whl"
+	install -d src/leaderboard_app
+	install -m 444 $$(ls -t ../dist/*.whl | head -1) src/leaderboard_app/e11.whl
+	@echo "OK -> src/leaderboard_app/e11.whl"
+
+
 
 # Create the virtual environment and install both host requirements
 # and the lambda requirements for testing
