Refactor e11 CLI and Lambda components for improved consistency and functionality. Added SCORE attribute to A class, updated SK_GRADE_PATTERN, and modified log and grade handling to use constants. Enhanced error handling in main.py for server version requests. Updated Makefile for better command visibility and added new dependencies in poetry.lock. Adjusted SAM configuration for leaderboard deployment, ensuring correct parameter references in template.yaml.

--- a/etc/e11-cli/lambda-leaderboard/Makefile
+++ b/etc/e11-cli/lambda-leaderboard/Makefile
@@ -19,13 +19,16 @@ sam-sync: install
 
 .PHONY: prod-vbd stage-vbd
 prod-vbd: template.yaml samconfig-prod.toml src/requirements.txt vend-e11
-	make lint
-	make check
+	echo make lint
+	echo make check
 	sam validate --config-file samconfig-prod.toml -t template.yaml --lint
 	sam build --parallel --use-container --config-file samconfig-prod.toml -t template.yaml
 	sam deploy --config-file "$$(pwd)/samconfig-prod.toml"  --parameter-overrides DeploymentTimestamp="$$(date +'%Y-%m-%dT%H:%M:%S%z %Z')" --no-confirm-changeset -t .aws-sam/build/template.yaml
 	curl --silent  https://leaderboard.csci-e-11.org/ | head -3
 
+
+tail-vbd:
+	sam logs --stack-name leaderboard --name LeaderboardFlaskFunction --tail   --region us-east-1   --profile fas
 
 # This target generates the requirements.txt for SAM to use
 src/requirements.txt: poetry.lock pyproject.toml
